--- a/FrontendAkamaiCdn/src/components/data-chart/DataChart.css
+++ b/FrontendAkamaiCdn/src/components/data-chart/DataChart.css
@@ -1,3 +1,23 @@
 .rv-xy-plot {
         display:inline-block
 }
+
+#container {
+        position: relative;
+}
+
+.legend {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 70%
+}
+
+.error {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 35%;
+        left: 40%
+}
