--- a/FrontendAkamaiCdn/src/components/section/Section.css
+++ b/FrontendAkamaiCdn/src/components/section/Section.css
@@ -1,8 +1,8 @@
 .card {
     background-color: white;
     border-radius: 25px;
-    padding: 2%;
-    margin-bottom: 2%;
+    padding: 2em;
+    margin-bottom: 2em;
 }
 
 .grid-container {
